--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
-
-<body>
-  <a href="https://github.com/login/oauth/authorize?client_id=Ov23li9wPChCqo7amcku">
-    Login with github
-  </a>
-</body>
-
+    <head>
+        <script>
+            const socket = new WebSocket('ws://localhost:3001');
+            socket.onmessage = event => {
+            var links = document.getElementsByClassName('linkId');
+            Array.from(links).forEach(link => {
+                link.href = 'https://github.com/login/oauth/authorize?client_id='+event.data;
+                });
+            };
+            socket.onopen = () => {
+            // console.log('Connected to server');
+            };
+            socket.onclose = () => {
+            // console.log('Disconnected from server');
+            };
+        </script>
+    </head>
+    <body>
+        <a href="link" class="linkId">
+            Login with github
+        </a>
+    </body>
 </html>
