--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
                 });
             };
             socket.onopen = () => {
-            // console.log('Connected to server');
+            console.log('Connected to server');
             };
             socket.onclose = () => {
-            // console.log('Disconnected from server');
+            console.log('Disconnected from server');
             };
         </script>
     </head>
