--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script>
-            const socket = new WebSocket('ws://my-ltim-blogs.vercel.app/:3001');
-            socket.onmessage = event => {
-            var links = document.getElementsByClassName('linkId');
-            Array.from(links).forEach(link => {
-                link.href = 'https://github.com/login/oauth/authorize?client_id='+event.data;
-                });
-            };
-            socket.onopen = () => {
-            console.log('Connected to server');
-            };
-            socket.onclose = () => {
-            console.log('Disconnected from server');
-            };
-        </script>
     </head>
     <body>
         <a href="link" class="linkId">
             Login with github
         </a>
+        <script>
+            setTimeout(() => {
+                console.log("in script")
+                const socket = new WebSocket('ws://my-ltim-blogs.vercel.app:3001');
+                socket.onmessage = event => {
+                var links = document.getElementsByClassName('linkId');
+                Array.from(links).forEach(link => {
+                    link.href = 'https://github.com/login/oauth/authorize?client_id='+event.data;
+                    });
+                };
+                socket.onopen = () => {
+                console.log('Connected to server');
+                };
+                socket.onclose = () => {
+                console.log('Disconnected from server');
+                };
+            }, 1000);
+        </script>
     </body>
 </html>
