--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
             Login with github
         </a>
         <script>
-            setTimeout(() => {
-                console.log("in script")
-                const socket = new WebSocket('ws://my-ltim-blogs.vercel.app:3001');
+            const socket = new WebSocket('ws://localhost:3001');
+            if(socket){
                 socket.onmessage = event => {
                 var links = document.getElementsByClassName('linkId');
                 Array.from(links).forEach(link => {
@@ -17,12 +16,12 @@
                     });
                 };
                 socket.onopen = () => {
-                console.log('Connected to server');
+                    console.log('Connected to server');
                 };
                 socket.onclose = () => {
-                console.log('Disconnected from server');
+                    console.log('Disconnected from server');
                 };
-            }, 1000);
+            }
         </script>
     </body>
 </html>
